--- a/back_fat/deno.json
+++ b/back_fat/deno.json
@@ -1,12 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --watch -A main.ts",
-    "init": "deno install --allow-scripts=npm:bcrypt --node-modules-dir npm:bcrypt"
+    "dev": "deno run --watch -A main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "sequelize": "npm:sequelize@^6.37.5",
-    "bcrypt": "npm:bcrypt@^5.1.1"
-  },
-  "nodeModulesDir":"auto"
+    "@std/assert": "jsr:@std/assert@1"
+  }
 }
